<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/resultList"
            android:layout_weight="0.02"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultGoAgainButton"
                android:id="@+id/resultGoAgainButton"
                android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultsNewGameButton"
                android:id="@+id/resultsNewGameButton"
                android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultExitGameButton"
                android:id="@+id/resultExitGameButton"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>