<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
             android:id="@+id/playerSelect">

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerSelectTexts"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/playerOneDescriptor"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_column="1"
                    android:id="@+id/playerSelectPlayerOneEditText"
                    android:inputType="text"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:id="@+id/playerSelectPlayerTwoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/playerTwoDescriptor"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_column="1"
                    android:id="@+id/playerSelectPlayerTwoEditText"
                    android:inputType="text"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/playerSelectTexts"
            android:layout_alignParentStart="true">

        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerTwoComputer"
                android:id="@+id/playerTwoComputerSwitch"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerSelectGoButton"
                android:id="@+id/playerSelectGoButton"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>